After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 751099 - Fix return value error in gdk_window_set_pass_through
Fix return value error in gdk_window_set_pass_through
Status: RESOLVED FIXED
Product: gtk+
Classification: Platform
Component: .General
3.17.x
Other FreeBSD
: Normal normal
: ---
Assigned To: gtk-bugs
gtk-bugs
Depends on:
Blocks:
 
 
Reported: 2015-06-17 10:04 UTC by Ting-Wei Lan
Modified: 2015-06-17 13:38 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
Fix return value error in gdk_window_set_pass_through (750 bytes, patch)
2015-06-17 10:12 UTC, Ting-Wei Lan
committed Details | Review

Description Ting-Wei Lan 2015-06-17 10:04:10 UTC
Please see the patch. This fixes error when compiling with clang.

gdkwindow.c:6840:3: error: non-void function 'gdk_window_get_pass_through' should return a value [-Wreturn-type]
Comment 1 Ting-Wei Lan 2015-06-17 10:12:21 UTC
Created attachment 305465 [details] [review]
Fix return value error in gdk_window_set_pass_through
Comment 2 Emmanuele Bassi (:ebassi) 2015-06-17 12:07:37 UTC
Review of attachment 305465 [details] [review]:

Ok.

In the future, feel free to push this kind of trivial patches.
Comment 3 Ting-Wei Lan 2015-06-17 13:37:57 UTC
Attachment 305465 [details] pushed as 3955d93 - Fix return value error in gdk_window_set_pass_through