Fix return value error in gdk_window_set_pass_through

https://bugzilla.gnome.org/show_bug.cgi?id=751099